tests/baselines/reference/scannerNumericLiteral9.errors.txt
scannerNumericLiteral9.ts(1,1): error TS1489: Decimals with leading zeros are not allowed.


==== scannerNumericLiteral9.ts (1 errors) ====
    009
    ~~~
!!! error TS1489: Decimals with leading zeros are not allowed.